# HLProgramming

./: .coveralls.yml  README.md  doing_first_lab.html  doing_first_lab.md
1/first-lab/: first-lab.sln
3/Graph/: Graph.sln
3/GraphViewer/: GraphViewer.sln
3/winapi-5/: winapi-5.sln
4/: report.docx
4/Students/: Students.sln
4/tables/: tables.sln
4/tables-1/: tables-1.sln
5/: 1.txt
5/file_ in_threads/: CMakeLists.txt  app.cpp  app.h  main.cpp  winlib_file.cpp  winlib_file.h
5/threads/: threads.sln
NIA/includes/: NIA.cpp  NIA.h  NIA_circle.h  NIA_csv.cpp  NIA_csv.h  NIA_draw.cpp  NIA_draw.h  NIA_error.cpp  NIA_error.h  NIA_errors.cpp  NIA_errors.h  NIA_event.h  NIA_file.cpp  NIA_file.h  NIA_font.cpp  NIA_font.h  NIA_image.cpp  NIA_image.h  NIA_line.h  NIA_listview.cpp  NIA_listview.h  NIA_listview__header_item.cpp  NIA_listview__header_item.h  NIA_listview__row.cpp  NIA_listview__row.h  NIA_listview__row_item.cpp  NIA_listview__row_item.h  NIA_main.h  NIA_mouse.cpp  NIA_mouse.h  NIA_point.h  NIA_point2D.h  NIA_render.cpp  NIA_render.h  NIA_statusbar.cpp  NIA_statusbar.h  NIA_utils.h
docs/: doing_first_lab.md
first-lab/first-lab/: first-lab.vcxproj  first-lab.vcxproj.filters
lib/: lib-event.h  lib-file.cpp  lib-file.h  lib-font.cpp  lib-font.h  lib-main.h  lib-rect.cpp  lib-rect.h  lib.h
reports/: build-without-numbers.bat  main-second.md  ready-no-numbers-2.docx  ready-no-numbers.docx  template-without-numbers.docx  template.docx
reports/1/: build.bat  main.md
reports/2/: build.bat  (+1 more)
second-lab/: second-lab.sln
second-lab-1/: second-lab-1.sln
(+213 files in other folders)
